# garmin_firmware_modify

./: .gitignore  Readme.md  run.sh
firmware_inject/: Cargo.toml
firmware_inject/src/: main.rs
firmware_payload/: Cargo.toml
firmware_payload/src/: garmin.rs  mem_dump.rs  port_search.rs
